# etabeta

./: .gitignore  etabeta.code-workspace  flake.nix  pyproject.toml  readme.md
backend/: .flake8  .gitignore  AIUser.py  EtaBeta.py  MANIFEST.in  README.md  UserError.py  dev-logging.ini  etabeta.code-workspace  flake.nix  main.py  pyproject.toml  session.py  session_route.py  sessions.pickle  sessions.py  sessions_route.py
backend/etabeta/: main.py
backend/etabeta/common/: Clock.py  Config.py  Message.py  User.py  chat_data.py  logging.py
backend/etabeta/common/tests/: clock_test.py
backend/etabeta/session/: AIUser.py  EtaBeta.py  Session.py  session.py  session_route.py
backend/etabeta/session/tests/: test_session_route.py
backend/etabeta/sessions/: Sessions.py  sessions.py  sessions_route.py
backend/etabeta/static_data/: index.html  main.864c97816302b69e.js  main.a632b987d2d39be4.js  main.ae2f6c52c5da63b2.js  main.f5bfe8602951bbd2.js
backend/scripts/: start-dev-sever.sh  update-dependencies.sh
backend/src/app/: main.py
backend/src/common/: Message.py  chat_data.py
backend/src/session/: AIUser.py  EtaBeta.py  session.py  session_route.py
backend/src/sessions/: sessions.py  sessions_route.py
scripts/: start-dev-sever.sh  start-prod-sever.sh
web-ui/: build-constants.ts  flake.nix  package-lock.json  package.json  webpack.dev.config.ts  webpack.prod.config.ts
webui/: .babelrc  .eslintrc.json  .gitignore  babel.config.json  build-constants.ts  jest.config.js  jest.config.json  jest.setup.ts  package-lock.json  package.json  tsconfig.json  (+3 more)
(+46 files in other folders)
