[project]
name = "etabeta"
version = "0.0.1"
dependencies = [
    "build",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "mypy",
    "black",
    "flake8",
    "flake8-bugbear",
    "colorlog",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"